--- a/index.html
+++ b/index.html
@@ -21,5 +21,6 @@
         <p>
           Following my assigned task I have created a header, but this time it's an h2 header!
         </p>
+      <img src="hello-kitty.jpg" alt="A picture of hello kitty">
     </body>
   </html>
