--- a/index.html
+++ b/index.html
@@ -21,6 +21,6 @@
         <p>
           Following my assigned task I have created a header, but this time it's an h2 header!
         </p>
-      <img src="first website/images/hello-kitty.jpg" alt="A picture of hello kitty">
+      <img src="images/hello-kitty.jpg" alt="A picture of hello kitty">
     </body>
   </html>
