--- a/index.html
+++ b/index.html
@@ -22,5 +22,6 @@
           Following my assigned task I have created a header, but this time it's an h2 header!
         </p>
       <img src="images/hello-kitty.jpg" alt="A picture of hello kitty">
+      <p>Follow this <a href="new_page.html">link</a> to go to my new web page</p>
     </body>
   </html>
